# mathNodes

./: .gitignore  .gitmodules  deleate.sh  install.sh  readme.md
add/: .projectManagerConfig  CMakeLists.txt  Makefile  generate_makefile.sh  out
add/src/: main.c
const/: generate_makefile.sh
const/src/: main.c
counter/: generate_makefile.sh
counter/src/: main.c
display/: csvplot.py  generate_makefile.sh  plot.py
display/src/: main.c
div/: generate_makefile.sh
div/src/: main.c
integral/: generate_makefile.sh
integral/src/: main.c
mul/: generate_makefile.sh
mul/src/: main.c
sub/: generate_makefile.sh
sub/src/: main.c
